<resources>
    <string name="app_name">Study English</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="username">Tài khoản </string>
    <string name="password">Mật khẩu </string>
    <string name="sign_up">Đăng kí</string>
    <string name="back">Trở lại</string>
    <string name="new_user">Tạo tài khoản</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="search">Tìm kiếm</string>
    <string name="irregular_verbs">Động từ bất quy tắc</string>
    <string name="setting">Cài đặt</string>
    <string name="information">Thông tin</string>
    <string name="result_search">Kết quả tìm thấy: </string>
    <string name="idioms_English">Thành ngữ</string>
    <string name="vocabulary">Từ vựng</string>
    <string name="reading">Kiểm tra đọc</string>
    <string name="listening">Kiểm tra nghe</string>
    <string name="grammar">Ngữ pháp</string>
    <string name="add">Thêm</string>
    <string name="searchword_and_irre">Tra từ - Bảng bất quy tắc</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
