<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main_menu">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/appbar">
    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.demotxt.droidsrce.homedashboard.Home"
            android:orientation="vertical"
            android:padding="10dp"

            android:gravity="center"
            android:id="@+id/ll">



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="">

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_account_circle_black_24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:id="@+id/edt_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Name"
                            android:textSize="25dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:scrollbars="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:layout_margin="10dp"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                            <LinearLayout
                                android:id="@+id/card_vocabulary"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:background="@drawable/backgrounditem"
                                    android:padding="10dp"
                                    android:src="@drawable/ic_search_black_24dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/searchword"
                                    android:textStyle="bold" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_margin="10dp"
                                    android:background="@color/lightgray" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="Check your word"
                                    android:textColor="@android:color/darker_gray" />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:layout_margin="10dp"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                            <LinearLayout
                                android:id="@+id/card_reading"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:background="@drawable/backgrounditem1"
                                    android:padding="10dp"
                                    android:src="@drawable/ic_rreading_black_24dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/reading"
                                    android:textStyle="bold" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_margin="10dp"
                                    android:background="@color/lightgray" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="Reading test"
                                    android:textColor="@android:color/darker_gray" />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:layout_margin="10dp"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                            <LinearLayout
                                android:id="@+id/card_grammar"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:background="@drawable/backgrounditem2"
                                    android:padding="10dp"
                                    android:src="@drawable/ic_school_black_24dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/grammar"
                                    android:textStyle="bold" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_margin="10dp"
                                    android:background="@color/lightgray" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="Exercise grammar"
                                    android:textColor="@android:color/darker_gray" />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:layout_margin="10dp"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                            <LinearLayout
                                android:id="@+id/card_listen"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:background="@drawable/backgrounditem3"
                                    android:padding="10dp"
                                    android:src="@drawable/ic_volume_up_black_24dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/listening"
                                    android:textStyle="bold" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_margin="10dp"
                                    android:background="@color/lightgray" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="Listening test"
                                    android:textColor="@android:color/darker_gray" />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:layout_margin="10dp"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground">

                            <LinearLayout

                                android:id="@+id/card_logout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:background="@drawable/backgrounditem4"
                                    android:padding="10dp"
                                    android:src="@drawable/ic_logout" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/action_logout"
                                    android:textStyle="bold" />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>